# osu-ipad-tablet

./: .gitignore  README.md
app/: app.json  package-lock.json  package.json
app/app/: _layout.tsx  calibrate.tsx  index.tsx  settings.tsx  tablet.tsx
app/src/components/: ActiveAreaOverlay.tsx  ConnectionStatus.tsx  TouchSurface.tsx
app/src/hooks/: useWebSocket.ts
app/src/lib/: calibration.ts  coordinateMapper.ts  protocol.ts  serverEndpoint.ts  settingsStorage.ts
app/src/providers/: SettingsProvider.tsx
app/src/types/: protocol.ts  settings.ts
server/: package-lock.json  package.json
server-rust/: Cargo.toml  README.md
server-rust/src/: input.rs  main.rs  protocol.rs  screen_info.rs  server.rs
server/src/: index.ts  inputHandler.ts  protocol.ts  screenInfo.ts  websocketServer.ts
