[package]
name = "osu-tablet-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
if-addrs = "0.13"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread"] }
tokio-tungstenite = "0.28"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
